ade git commit -m adee

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 <body class="bg-gray-950">
     <!-- Test Element for Tailwind CSS - If you see this div styled, Tailwind is loading! -->
     <div class="bg-blue-500 text-white p-2 text-center fixed top-0 left-0 w-full z-max">
-        <span class="text-sm">If you see this, Tailwind CSS is loading!</span>
+        <span class="text-sm">loading!</span>
     </div>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -309,6 +309,7 @@
                                     { name: 'JavaScript', icon: 'fab fa-js-square', color: 'text-yellow-500' },
                                     { name: 'React.js', icon: 'fab fa-react', color: 'text-blue-400' },
                                     { name: 'Tailwind CSS', icon: 'fas fa-wind', color: 'text-cyan-400' },
+                                    { name: "Java", icon: 'fab fa-java', color:'text-red-500'},
                                     { name: 'MySQL', icon: 'fas fa-database', color: 'text-blue-600' },
                                     { name: 'Git', icon: 'fab fa-git-alt', color: 'text-red-600' },
                                     { name: 'GitHub', icon: 'fab fa-github', color: 'text-gray-400' },
@@ -319,7 +320,10 @@
                                     { name: 'Debugging', icon: 'fas fa-bug', color: 'text-red-400' },
                                     { name: 'VS Code', icon: 'fas fa-code', color: 'text-blue-500' },
                                     { name: 'Jest', icon: 'fas fa-flask', color: 'text-red-700' },
-                                    { name: 'Figma', icon: 'fab fa-figma', color: 'text-pink-500' },
+                                    { name: 'Figma', icon: 'fab fa-figma', color: 'text-red-500' },
+                                    { name: 'Ui/UX', icon: 'fab fas fa-desktop', color: 'text-blue-500' },
+                                    { name: 'Bootstrap', icon: 'fab fab fa-bootstrap', color: 'text-purple-600' },
+
                                 ].map((skill, index) => (
                                     <div
                                         key={skill.name}
