--- a/public/index.html
+++ b/public/index.html
@@ -597,6 +597,8 @@
         // Render the App component into the 'root' div
         ReactDOM.createRoot(document.getElementById('root')).render(<App />);
     </script>
+
+    <input type="text" name="roll"> <br> <br>
 </body>
 
 </html>
