--- a/public/index.html
+++ b/public/index.html
@@ -265,7 +265,7 @@
                                     Hi, I'm <span className="text-blue-600 ">Jaleel K M</span>
                                 </h1>
                                 <p className="text-2xl md:text-3xl text-gray-300 mb-8">
-                                    A passionate <span className="font-semibold text-blue-400">Frontend Developer</span>
+                                    A passionate <span className="font-semibold text-blue-400">Full Stack Developer</span>
                                 </p>
                                 <p className="text-lg md:text-xl text-gray-400 max-w-2xl mx-auto mb-10">
                                     {userBioText}
@@ -348,7 +348,52 @@
                         <section id="projects" className="py-16 md:py-24 text-center">
                             <h2 className="text-4xl md:text-5xl font-bold text-white mb-12 animate-fade-in-up">My Projects</h2>
                             <div className="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-                                {/* RJ Technology Project */}
+
+                                {/* job portal */}
+                                <div className="bg-gray-800 rounded-xl p-8 shadow-lg flex flex-col justify-between transition-all duration-300 hover:scale-[1.02] hover:bg-gray-700 transform">
+                                    <div>
+                                        <h3 className="text-3xl font-bold text-blue-400 mb-4">Job-Portal Full-Stack Web App</h3>
+                                        <p className="text-gray-300 mb-6 text-lg">
+                                           A modern job portal web application designed to connect job seekers with employers efficiently. Built using React for the frontend and Spring Boot (Java) for the backend, with MySQL handling data storage, this platform offers a seamless user experience for job browsing, posting, and management.
+                                        </p>
+                                    </div>
+                                    <div className="flex flex-col sm:flex-row gap-3 justify-center">
+                                        <a
+                                            href="https://job-portal-mu-sable.vercel.app/"
+                                            target="_blank"
+                                            rel="noopener noreferrer"
+                                            className="inline-flex items-center justify-center px-4 py-2 border border-blue-600 text-blue-200 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 ease-in-out bg-blue-600 hover:bg-blue-700 transform hover:-translate-y-1 mt-auto text-sm"
+                                        >
+                                            View Project <i className="fas fa-external-link-alt ml-2"></i>
+                                        </a>
+
+                                    </div>
+                                </div>
+
+
+                               
+                                {/* Responsive Delivery */}
+                                <div className="bg-gray-800 rounded-xl p-8 shadow-lg flex flex-col justify-between transition-all duration-300 hover:scale-[1.02] hover:bg-gray-700 transform">
+                                    <div>
+                                        <h3 className="text-3xl font-bold text-blue-400 mb-4">Job-Portal Full-Stack Web App</h3>
+                                        <p className="text-gray-300 mb-6 text-lg">
+                                            "Tomato" is a modern food delivery platform that enables users to browse menus, manage a cart, and place orders with ease. Admins can manage menu items, update order statuses, and track orders through a dedicated dashboard.it features JWT-based authentication and responsive design
+                                            </p>
+                                            </div>
+                                            <div className="flex flex-col sm:flex-row gap-3 justify-center">
+                                                <a
+                                                href="https://delivery-app-seven-weld.vercel.app/"
+                                            target="_blank"
+                                            rel="noopener noreferrer"
+                                            className="inline-flex items-center justify-center px-4 py-2 border border-blue-600 text-blue-200 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 ease-in-out bg-blue-600 hover:bg-blue-700 transform hover:-translate-y-1 mt-auto text-sm"
+                                        >
+                                            View Project <i className="fas fa-external-link-alt ml-2"></i>
+                                        </a>
+
+                                    </div>
+                                </div>
+
+                                 {/* RJ Technology Project */}
                                 <div className="bg-gray-800 rounded-xl p-8 shadow-lg flex flex-col justify-between transition-all duration-300 hover:scale-[1.02] hover:bg-gray-700 transform">
                                     <div>
                                         <h3 className="text-3xl font-bold text-blue-400 mb-4">RJ Technology</h3>
@@ -368,29 +413,6 @@
 
                                     </div>
                                 </div>
-                                {/* Responsive Developer Portfolio */}
-                                <div className="bg-gray-800 rounded-xl p-8 shadow-lg flex flex-col justify-between transition-all duration-300 hover:scale-[1.02] hover:bg-gray-700 transform">
-                                    <div>
-                                        <h3 className="text-3xl font-bold text-blue-400 mb-4">Personal Portfolio</h3>
-                                        <p className="text-gray-300 mb-6 text-lg">
-                                            Structured content to highlight project case studies, skills, and contact information, enhancing user engagement and accessibility. Focused on performance optimization, SEO best practices, and cross-browser compatibility.
-                                        </p>
-                                    </div>
-                                    <div className="flex flex-col sm:flex-row gap-3 justify-center">
-                                        <a
-                                            href="https://portfolio-xi-one-28.vercel.app/"
-                                            target="_blank"
-                                            rel="noopener noreferrer"
-                                            className="inline-flex items-center justify-center px-4 py-2 border border-blue-600 text-blue-200 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 ease-in-out bg-blue-600 hover:bg-blue-700 transform hover:-translate-y-1 mt-auto text-sm"
-                                        >
-                                            View Project <i className="fas fa-external-link-alt ml-2"></i>
-                                        </a>
-
-                                    </div>
-                                </div>
-
-
-
 
                                 {/* RedStore E-commerce */}
                                 <div className="bg-gray-800 rounded-xl p-8 shadow-lg flex flex-col justify-between transition-all duration-300 hover:scale-[1.02] hover:bg-gray-700 transform">
