made some changes

--- a/public/index.html
+++ b/public/index.html
@@ -322,7 +322,8 @@
                                     { name: 'Jest', icon: 'fas fa-flask', color: 'text-red-700' },
                                     { name: 'Figma', icon: 'fab fa-figma', color: 'text-red-500' },
                                     { name: 'Ui/UX', icon: 'fab fas fa-desktop', color: 'text-blue-500' },
-                                    { name: 'Bootstrap', icon: 'fab fab fa-bootstrap', color: 'text-purple-600' },
+                                    // { name: 'Spring-Boot', icon: 'fab fab fa-postman, color: 'text-purple-600' },
+                                    
 
                                 ].map((skill, index) => (
                                     <div
@@ -375,7 +376,7 @@
                                 {/* Responsive Delivery */}
                                 <div className="bg-gray-800 rounded-xl p-8 shadow-lg flex flex-col justify-between transition-all duration-300 hover:scale-[1.02] hover:bg-gray-700 transform">
                                     <div>
-                                        <h3 className="text-3xl font-bold text-blue-400 mb-4">Job-Portal Full-Stack Web App</h3>
+                                        <h3 className="text-3xl font-bold text-blue-400 mb-4">Food Delivery Web App</h3>
                                         <p className="text-gray-300 mb-6 text-lg">
                                             "Tomato" is a modern food delivery platform that enables users to browse menus, manage a cart, and place orders with ease. Admins can manage menu items, update order statuses, and track orders through a dedicated dashboard.it features JWT-based authentication and responsive design
                                             </p>
