--- a/public/index.html
+++ b/public/index.html
@@ -360,7 +360,7 @@
                                     </div>
                                     <div className="flex flex-col sm:flex-row gap-3 justify-center">
                                         <a
-                                            href="https://job-portal-mu-sable.vercel.app/"
+                                            href="https://job-port-full-stack.vercel.app/"
                                             target="_blank"
                                             rel="noopener noreferrer"
                                             className="inline-flex items-center justify-center px-4 py-2 border border-blue-600 text-blue-200 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 ease-in-out bg-blue-600 hover:bg-blue-700 transform hover:-translate-y-1 mt-auto text-sm"
